sratom (0.6.6) stable;

  * Fix various minor warnings and other code quality issues

 -- David Robillard <d@drobilla.net>  Sun, 27 Sep 2020 15:18:12 +0000

sratom (0.6.4) stable;

  * Make sratom_free() safe to call on NULL
  * Various minor code cleanups

 -- David Robillard <d@drobilla.net>  Sun, 10 Nov 2019 21:20:40 +0000

sratom (0.6.2) stable;

  * Various minor code cleanups

 -- David Robillard <d@drobilla.net>  Sun, 22 Jul 2018 18:48:51 +0000

sratom (0.6.0) stable;

  * Add sratom_set_env() for setting prefixes
  * Fix padding of constructed vectors (thanks Hanspeter Portner)
  * Fix warnings when building with ISO C++ compilers
  * Support round-trip serialisation of relative paths
  * Support sequences with beat time stamps
  * Upgrade to waf 1.8.14

 -- David Robillard <d@drobilla.net>  Tue, 20 Sep 2016 02:25:35 +0000

sratom (0.4.6) stable;

  * Don't set eg prefix in sratom_to_turtle
  * Update for latest LV2 Atom Object simplification
  * Upgrade to waf 1.7.16

 -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 22:14:19 +0000

sratom (0.4.4) stable;

  * Escape invalid characters when writing paths as URIs
  * Fancier printing without subject and predicate

 -- David Robillard <d@drobilla.net>  Sat, 04 Jan 2014 21:09:33 +0000

sratom (0.4.2) stable;

  * Disable timestamps in HTML documentation for reproducible build
  * Fix memory leaks
  * Fix serialisation of nested tuples
  * Update to waf 1.7.9 and autowaf r90 (install docs to versioned directory)
  * Use new sord API to clean up and shrink code

 -- David Robillard <d@drobilla.net>  Mon, 18 Feb 2013 16:17:01 +0000

sratom (0.4.0) stable;

  * Correctly read objects with several rdf:type properties
  * Fix various hyper-strict warnings
  * Support writing Object Atoms as top level descriptions if subject and
    predicate are not given.
  * Upgrade to waf 1.7.2

 -- David Robillard <d@drobilla.net>  Thu, 23 Aug 2012 05:11:07 +0000

sratom (0.2.0) stable;

  * Initial release
